# osc-fish-complete

./: README.md  setup.cfg
osc_fish_complete/: complete.py
