[metadata]
name = osc-fish-complete
version = 0.0.1
author = buty4649
author_email = buty4649@gmail.com
description = opnestackclient command-line completion for fish shell
long_description = file:README.md
url = https://github.com/buty4649/osc-fish-complete
license = MIT

[options]
packages = find:

[options.entry_points]
cliff.formatter.completion =
    fish=osc_fish_complete.complete:CompleteFish
